--- a/operations/workshop/Makefile.am
+++ b/operations/workshop/Makefile.am
@@ -25,8 +25,9 @@ op_LTLIBRARIES =    \
 	median-blur.la \
 	rawbayer-load.la \
 	segment-kmeans.la \
+	slic.la \
 	unpremul.la \
-        vhsfix.la \
-        waterpixels.la \
-        watershed-transform.la
+    vhsfix.la \
+    waterpixels.la \
+    watershed-transform.la
 
