--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -249,4 +249,6 @@ operations/workshop/mandelbrot.c
 operations/workshop/median-blur.c
 operations/workshop/rawbayer-load.c
 operations/workshop/segment-kmeans.c
+operations/workshop/shadows-highlights.c
+operations/workshop/shadows-highlights-correction.c
 operations/workshop/vhsfix.c
