--- a/operations/workshop/Makefile.am
+++ b/operations/workshop/Makefile.am
@@ -12,6 +12,7 @@ LIBS = $(op_libs)
 
 opdir = $(ext_dir)
 op_LTLIBRARIES =    \
+	bilateral-filter-fast.la \
 	component-extract.la \
 	demosaic-bimedian.la \
 	demosaic-simple.la \
