--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -239,6 +239,7 @@ operations/workshop/generated/subtractive.c
 operations/workshop/gradient-map.c
 operations/workshop/hstack.c
 operations/workshop/image-gradient.c
+operations/workshop/integral-image.c
 operations/workshop/kuwahara.c
 operations/workshop/mandelbrot.c
 operations/workshop/median-blur.c
