--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -243,6 +243,7 @@ operations/workshop/kuwahara.c
 operations/workshop/mandelbrot.c
 operations/workshop/median-blur.c
 operations/workshop/rawbayer-load.c
+operations/workshop/segment-kmeans.c
 operations/workshop/vhsfix.c
 operations/workshop/waterpixels.c
 operations/workshop/watershed-transform.c
