tests: workaound for including mipmap files in tarball
Bu using a development opt-in conditional, workshop is enabled, SUBDIR gets
noticed and all neccesary build files get included in the tarball.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -8,4 +8,8 @@ SUBDIRS = \
 	ff-load-save \
 	python 
 
+if ENABLE_WORKSHOP  # we do not want these tests to run by default, as long as they fail
+SUBDIRS += mipmap 
+endif
+
 #opencl
