--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -116,6 +116,7 @@ operations/common/save.c
 operations/common/sepia.c
 operations/common/shift.c
 operations/common/sinus.c
+operations/common/slic.c
 operations/common/snn-mean.c
 operations/common/softglow.c
 operations/common/stress.c
@@ -245,7 +246,6 @@ operations/workshop/mandelbrot.c
 operations/workshop/median-blur.c
 operations/workshop/rawbayer-load.c
 operations/workshop/segment-kmeans.c
-operations/workshop/slic.c
 operations/workshop/vhsfix.c
 operations/workshop/waterpixels.c
 operations/workshop/watershed-transform.c
