waterpixels: move it from workshop to common

--- a/operations/common/Makefile.am
+++ b/operations/common/Makefile.am
@@ -152,6 +152,7 @@ gegl_common_la_SOURCES =\
 	video-degradation.c \
 	vignette.c \
 	warp.c \
+	waterpixels.c \
 	watershed-transform.c \
 	waves.c \
 	wavelet-blur.c \
