workshop: add linear-sinusoid operation
Renders a two-dimensional linear sinusoid pattern: a sum of two
linear sinusoids over a pair of axes.  Useful for halftoning,
among other things.

--- a/operations/workshop/Makefile.am
+++ b/operations/workshop/Makefile.am
@@ -21,6 +21,7 @@ op_LTLIBRARIES =    \
 	hstack.la \
 	integral-image.la \
 	kuwahara.la \
+	linear-sinusoid.la \
 	mandelbrot.la \
 	median-blur.la \
 	rawbayer-load.la \
