workshop: add bayer-matrix operation
Renders a Bayer matrix pattern.  Useful for ordered dithering.

--- a/operations/workshop/Makefile.am
+++ b/operations/workshop/Makefile.am
@@ -12,6 +12,7 @@ LIBS = $(op_libs)
 
 opdir = $(ext_dir)
 op_LTLIBRARIES =    \
+	bayer-matrix.la \
 	bilateral-filter-fast.la \
 	demosaic-bimedian.la \
 	demosaic-simple.la \
