newsprint: new GEGL operation
Reimplementation of scratch of most of the functionality of GIMPs newsprint
plug-in with additional color based modulation of halftoned results. More
documentation/exampels of this op will appear at
https://pippin.gimp.org/spachrotyzer/

--- a/operations/common/Makefile.am
+++ b/operations/common/Makefile.am
@@ -94,6 +94,7 @@ gegl_common_la_SOURCES =\
 	motion-blur-circular.c \
 	motion-blur-linear.c \
 	motion-blur-zoom.c \
+	newsprint.c \
 	noise-cie-lch.c \
 	noise-hsv.c \
 	noise-hurl.c \
