build: move G_LOG_DOMAIN define to a Makefile.am as suggested in glib docs...

--- a/gegl/Makefile.am
+++ b/gegl/Makefile.am
@@ -12,6 +12,7 @@ endif
 
 SUBDIRS = buffer graph module operation process property-types opencl
 
+
 CLEANFILES =
 
 AM_CPPFLAGS = \
@@ -31,6 +32,7 @@ AM_CPPFLAGS = \
 	-I$(top_builddir)/gegl/property-types \
 	-I$(top_srcdir)/gegl/property-types \
 	-DLIBDIR=\""$(libdir)"\" \
+        -DG_LOG_DOMAIN=\"GEGL\" \
 	-DGEGL_LOCALEDIR=\""$(GEGL_LOCALEDIR)"\"
 
 AM_CFLAGS = $(DEP_CFLAGS) $(BABL_CFLAGS)
