--- a/operations/workshop/Makefile.am
+++ b/operations/workshop/Makefile.am
@@ -27,4 +27,4 @@ op_LTLIBRARIES =    \
 	rawbayer-load.la \
 	segment-kmeans.la \
 	shadows-highlights.la \
-	shadows-highlights-correction.la \
+	shadows-highlights-correction.la
