docs: clean out operations gallery one make clean

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -206,7 +206,7 @@ else
 endif
 
 clean-local:
-	rm -rf images/examples;
+	rm -rf operations
 
 distclean-local:
 	if test $(srcdir) = .; then :; else 	\
