--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -59,6 +59,7 @@ operations/common/gegl.c
 operations/common/grey.c
 operations/common/grid.c
 operations/common/high-pass.c
+operations/common/hue-chroma.c
 operations/common/illusion.c
 operations/common/image-compare.c
 operations/common/image-gradient.c
